--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <title>Mobile Calendar</title>
+<!-- Chart.js for chart rendering -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
 :root {
   --bg:#0b0d16;
@@ -18,7 +20,7 @@ body{margin:0;background:var(--bg);font-family:system-ui;color:var(--text);overf
 .container{display:flex;flex-direction:column;height:100vh;}
 
 /* Header */
-.header{padding:16px;background:var(--glass);backdrop-filter:blur(var(--blur));display:flex;justify-content:center;align-items:center;font-size:20px;font-weight:800;}
+.header{padding:16px;background:var(--glass);backdrop-filter:blur(var(--blur));display:flex;justify-content:center;align-items:center;font-size:20px;font-weight:800;position:relative}
 
 /* Unified toggle button */
 .toggle-btn{position:absolute;right:16px;top:14px;width:48px;height:48px;border-radius:50%;background:linear-gradient(135deg,var(--accent),var(--accent2));display:flex;justify-content:center;align-items:center;font-size:22px;box-shadow:0 0 20px rgba(0,0,0,0.4);transition:0.25s;}
@@ -34,26 +36,26 @@ body{margin:0;background:var(--bg);font-family:system-ui;color:var(--text);overf
 .month-name{font-size:22px;font-weight:800;}
 
 .days-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:8px;}
-.day{aspect-ratio:1;display:flex;justify-content:center;align-items:center;border-radius:14px;background:var(--glass);backdrop-filter:blur(var(--blur));position:relative;font-weight:700;}
-
-/* dot for tasks */
+.day{aspect-ratio:1;display:flex;justify-content:center;align-items:center;border-radius:14px;background:var(--glass);backdrop-filter:blur(var(--blur));position:relative;font-weight:700;cursor:pointer;}
 .day.has::after{
   content:"";
-  width:8px;height:8px;
+  width:10px;height:10px;
   border-radius:50%;
   background:#4affb9;
   position:absolute;
-  bottom:6px;
+  bottom:8px;
   box-shadow:0 0 6px #4affb9;
+  border:1px solid rgba(255,255,255,0.18);
 }
 .day.today{outline:2px solid var(--accent);} 
+.day.selected{box-shadow:0 8px 20px rgba(74,108,250,0.14);}
 
 /* Tasks */
 .tasks{display:flex;flex-direction:column;gap:12px;margin-top:16px;}
 .task-card{background:var(--glass);backdrop-filter:blur(var(--blur));padding:14px;border-radius:var(--radius);} 
 .client-name{font-size:18px;font-weight:800;}
 .car{font-size:14px;opacity:0.7;margin-top:4px;}
-.time-tag{padding:8px 10px;background:linear-gradient(135deg,var(--accent),var(--accent2));border-radius:12px;font-size:14px;font-weight:700;display:inline-block;margin-top:8px;}
+.time-tag{padding:8px 10px;background:linear-gradient(135deg,var(--accent),var(--accent2));border-radius:12px;font-size:14px;font-weight:700;display:inline-block;margin-top:8px;color:#07122b}
 .price{margin-top:12px;padding:10px;border-radius:12px;font-size:18px;font-weight:900;text-align:center;background:#222;}
 
 /* Earnings */
@@ -61,14 +63,18 @@ body{margin:0;background:var(--bg);font-family:system-ui;color:var(--text);overf
 .earn-title{font-weight:800;margin-bottom:6px;font-size:18px;}
 
 /* Chart view */
-.chart-wrap{width:100%;height:240px;display:flex;justify-content:center;align-items:center;background:var(--glass);backdrop-filter:blur(var(--blur));border-radius:var(--radius);} 
-canvas{max-height:220px !important;} 
+.chart-wrap{width:100%;height:220px;display:flex;justify-content:center;align-items:center;background:var(--glass);backdrop-filter:blur(var(--blur));border-radius:var(--radius);} 
+canvas{max-height:200px !important; width:100% !important}
 
 /* Modal */
-.modal-bg{position:fixed;inset:0;background:rgba(0,0,0,0.5);backdrop-filter:blur(4px);display:none;justify-content:center;align-items:center;}
+.modal-bg{position:fixed;inset:0;background:rgba(0,0,0,0.5);backdrop-filter:blur(4px);display:none;justify-content:center;align-items:center;z-index:50}
 .modal{width:88%;background:var(--glass);backdrop-filter:blur(var(--blur));padding:16px;border-radius:var(--radius);} 
-.input{width:100%;margin-bottom:12px;padding:12px;border-radius:12px;background:#111;border:none;color:white;}
-.btn{width:100%;padding:12px;background:linear-gradient(135deg,var(--accent),var(--accent2));border-radius:12px;text-align:center;font-weight:800;margin-top:8px;} 
+.input{width:100%;margin-bottom:12px;padding:12px;border-radius:12px;background:#111;border:none;color:white;font-weight:800}
+.btn{width:100%;padding:12px;background:linear-gradient(135deg,var(--accent),var(--accent2));border-radius:12px;text-align:center;font-weight:800;margin-top:8px;cursor:pointer}
+
+/* small helpers */
+.center{ text-align:center;color:rgba(255,255,255,0.6);padding:14px;font-weight:800}
+
 </style>
 </head>
 <body>
@@ -113,45 +119,160 @@ canvas{max-height:220px !important;}
     <input class="input" id="clientName" placeholder="Имя клиента">
     <input class="input" id="carModel" placeholder="Машина">
     <input class="input" id="time" placeholder="Время (12:00)">
-    <input class="input" id="price" placeholder="Цена (4500)">
+    <input class="input" id="price" placeholder="Цена (4500)" inputmode="numeric">
     <div class="btn" id="saveRecord">Сохранить</div>
   </div>
 </div>
 
 <script>
+// Data stored as { 'YYYY-MM-DD': [ {client,car,time,price,createdAt} ] }
+const STORAGE_KEY = 'mobile_tasks';
+let tasks = JSON.parse(localStorage.getItem(STORAGE_KEY) || '{}');
 let onCalendar = true;
+let selectedDate = new Date().toISOString().slice(0,10);
+let view = new Date(); // current view month
+
 const toggle=document.getElementById("toggle");
 const calendarView=document.getElementById("calendar-view");
 const chartView=document.getElementById("chart-view");
+const daysGrid=document.getElementById("daysGrid");
+const monthName=document.getElementById('monthName');
+const prevMonth=document.getElementById('prevMonth');
+const nextMonth=document.getElementById('nextMonth');
+const tasksList=document.getElementById('tasksList');
+const earnAllEl=document.getElementById('earnAll');
+const earnMonthEl=document.getElementById('earnMonth');
+const earnDayEl=document.getElementById('earnDay');
+const modalBg=document.getElementById('modalBg');
+const clientName=document.getElementById('clientName');
+const carModel=document.getElementById('carModel');
+const timeInput=document.getElementById('time');
+const priceInput=document.getElementById('price');
+const saveRecord=document.getElementById('saveRecord');
+const incomeChartCtx = document.getElementById('incomeChart').getContext('2d');
+let incomeChart=null;
 
+// toggle single button
 toggle.onclick=()=>{
   onCalendar = !onCalendar;
   calendarView.classList.toggle("active", onCalendar);
   chartView.classList.toggle("active", !onCalendar);
   toggle.textContent = onCalendar ? "📅" : "📊";
+  if(!onCalendar) updateChart();
 };
 
-/* Calendar generation */
-const daysGrid=document.getElementById("daysGrid");
-let year=2025,month=2; // March
+// render calendar for current view (view is Date)
 function renderCal(){
-  daysGrid.innerHTML="";
-  const d=new Date(year,month,1);
-  const monthName=d.toLocaleString('ru',{month:'long'})+" "+year;
-  document.getElementById("monthName").textContent=monthName;
-  const days=new Date(year,month+1,0).getDate();
+  daysGrid.innerHTML='';
+  const y = view.getFullYear();
+  const m = view.getMonth();
+  const first = new Date(y,m,1);
+  const daysInMonth = new Date(y,m+1,0).getDate();
+  monthName.textContent = first.toLocaleString('ru',{month:'long'}) + ' ' + y;
 
-  for(let i=1;i<=days;i++){
-    const el=document.createElement("div");
-    el.className="day";
-    el.textContent=i;
-    if(Math.random()>0.7) el.classList.add("has");
+  // optionally pad if you want Mon-first; here we just show days sequentially to fit mobile
+  for(let d=1; d<=daysInMonth; d++){
+    const date = new Date(y,m,d);
+    const iso = date.toISOString().slice(0,10);
+    const el = document.createElement('div');
+    el.className = 'day';
+    el.dataset.date = iso;
+    el.textContent = d;
+    if(tasks[iso] && tasks[iso].length) el.classList.add('has');
+    if(iso===new Date().toISOString().slice(0,10)) el.classList.add('today');
+    if(iso===selectedDate) el.classList.add('selected');
+    el.addEventListener('click', ()=>{ selectedDate = iso; renderCal(); renderTasks(); });
     daysGrid.appendChild(el);
   }
 }
-renderCal();
-document.getElementById("prevMonth").onclick=()=>{month--;renderCal();};
-document.getElementById("nextMonth").onclick=()=>{month++;renderCal();};
+
+function renderTasks(){
+  const list = tasks[selectedDate] || [];
+  tasksList.innerHTML = '';
+  if(!list.length){ tasksList.innerHTML = '<div class="center">Нет записей на этот день. Нажмите + чтобы добавить.</div>'; updateEarnings(); return; }
+  list.forEach((r, i)=>{
+    const card = document.createElement('div'); card.className='task-card';
+    card.innerHTML = `
+      <div class="client-name">${escapeHtml(r.client)}</div>
+      <div class="car">${escapeHtml(r.car)}</div>
+      <div style="display:flex;justify-content:space-between;align-items:center;margin-top:8px;">
+        <div class="time-tag">${escapeHtml(r.time)}</div>
+        <div style="font-weight:800">${Number(r.price).toLocaleString()} ₽</div>
+      </div>
+    `;
+    // delete button
+    const del = document.createElement('div'); del.style.marginTop='10px'; del.style.textAlign='right';
+    del.innerHTML = '<button style="padding:8px 10px;border-radius:10px;border:0;background:rgba(255,255,255,0.04);color:#fff;">Удалить</button>';
+    del.querySelector('button').addEventListener('click', ()=>{ if(confirm('Удалить запись?')){ tasks[selectedDate].splice(i,1); if(!tasks[selectedDate].length) delete tasks[selectedDate]; persist(); renderCal(); renderTasks(); updateEarnings(); } });
+    card.appendChild(del);
+    tasksList.appendChild(card);
+  });
+  updateEarnings();
+}
+
+function updateEarnings(){
+  // total all-time
+  let all=0;
+  for(const date in tasks){ for(const r of tasks[date]) all += Number(r.price||0); }
+  earnAllEl.textContent = all.toLocaleString() + ' ₽';
+
+  // month earnings for view month
+  const y = view.getFullYear(); const m = String(view.getMonth()+1).padStart(2,'0');
+  let monthSum=0; for(const date in tasks){ if(date.slice(0,7)===`${y}-${m}`){ for(const r of tasks[date]) monthSum += Number(r.price||0); } }
+  earnMonthEl.textContent = monthSum.toLocaleString() + ' ₽';
+
+  // day earnings for selectedDate
+  let daySum = 0; for(const r of (tasks[selectedDate]||[])) daySum += Number(r.price||0);
+  earnDayEl.textContent = daySum.toLocaleString() + ' ₽';
+}
+
+function persist(){ localStorage.setItem(STORAGE_KEY, JSON.stringify(tasks)); }
+function escapeHtml(s){ if(!s && s!==0) return ''; return String(s).replace(/[&<>'"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+
+// modal
+document.getElementById('openAdd')?.addEventListener('click', ()=>{ modalBg.style.display='flex'; });
+// but user may click FAB not present in this version; allow plus via toggle double-click - keep simple: show modal when long-press on selected day? We'll show modal when user clicks day and then clicks saveRecord - also allow opening modal by double-clicking selected day
+
+// Save record button
+saveRecord.addEventListener('click', ()=>{
+  const client = clientName.value.trim(); const car = carModel.value.trim(); const time = timeInput.value.trim(); const price = Number(priceInput.value.trim()) || 0;
+  if(!client){ alert('Введите имя клиента'); return; }
+  if(!tasks[selectedDate]) tasks[selectedDate]=[];
+  tasks[selectedDate].push({ client, car, time, price, createdAt:new Date().toISOString() });
+  persist(); clientName.value=''; carModel.value=''; timeInput.value=''; priceInput.value=''; modalBg.style.display='none'; renderCal(); renderTasks(); updateEarnings();
+});
+
+// allow clicking anywhere on a selected day to open modal (double click)
+daysGrid.addEventListener('dblclick', (e)=>{
+  const d = e.target.closest('.day'); if(!d) return; selectedDate = d.dataset.date; modalBg.style.display='flex';
+});
+
+// prev/next
+prevMonth.addEventListener('click', ()=>{ view.setMonth(view.getMonth()-1); renderCal(); updateEarnings(); });
+nextMonth.addEventListener('click', ()=>{ view.setMonth(view.getMonth()+1); renderCal(); updateEarnings(); });
+
+// Chart: simple last-30-days sum
+function initChart(){
+  incomeChart = new Chart(incomeChartCtx, {
+    type: 'line',
+    data: { labels: [], datasets: [{ label:'Доход', data: [], fill:true, backgroundColor:'rgba(74,108,250,0.14)', borderColor:'#4a6cfa', tension:0.35 }] },
+    options: { responsive:true, maintainAspectRatio:false, plugins:{legend:{display:false}}, scales:{ x:{ grid:{display:false} }, y:{ grid:{color:'rgba(255,255,255,0.03)'} } } }
+  });
+  updateChart();
+}
+
+function updateChart(){
+  if(!incomeChart) initChart();
+  const labels=[]; const data=[];
+  for(let i=29;i>=0;i--){ const d=new Date(); d.setDate(d.getDate()-i); const iso = d.toISOString().slice(0,10); labels.push(d.toLocaleDateString('ru-RU',{day:'numeric',month:'short'})); let s=0; if(tasks[iso]) for(const r of tasks[iso]) s += Number(r.price||0); data.push(s); }
+  incomeChart.data.labels = labels; incomeChart.data.datasets[0].data = data; incomeChart.update();
+}
+
+// initial render
+renderCal(); renderTasks(); updateEarnings();
+
+// expose for debugging
+window._mobileTasks = tasks;
 </script>
 </body>
 </html>
